src/styles.css
:root {

  --primary-color:#FF6060;
  --second-color:var(--grey-color);
  --third-color:#535bf2;
  --grey-color:#C4C4C4;
  --black-color:#000;
  --white-color:#FFF;
  --debeug-color:#FF00FF;
  --debeug-color-alt:tomato;
  

  --body-font-family:"DM Sans", sans-serif;
  --body-font-size:1.15rem;
  --body-font-weight:400;

  /* --title-font-family:"DM Sans", sans-serif;
  --title-font-size:1rem; */
  
  /* --cta-button-font-size:1.2rem;
  --cta-button-color:var(--white-color);
  --cta-button-weight:600;
  --cta-button-background:var(--main-color); */
  
  --radius:5px;
  --regTransi:all .26s ease-in-out;
  }


  * {
    box-sizing: border-box;
  }

  body {
    --layout:"Desk";
    --skeleton:1240px;
    font-family:var(--body-font-family);
    font-size:var(--body-font-size);
    font-weight:var(--body-font-weight);
    margin: 0;
    padding: 0;
  }

a {
  color: var(--primary-color);
  text-decoration: unset;
  transition: var(--regTransi);
}

a:hover {
  color: var(--third-color);
}

.skeleton{
  max-width:var(--skeleton);
  margin: 0 auto;
  /* display: flex;
  flex-direction: column;
  height:100dvh; */
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}


.debeug {
  outline:4px dotted var(--debeug-color);
}

.debeug-alt {
  outline:2px dashed var(--debeug-color-alt);
}


h1 {
  font-size: 3.2rem;
  line-height: 1.1;
}

button {
  border-radius: var(--radius);
  border: 1px solid transparent;
  padding: 0.5rem 1.25rem;
  font-size: 1.1rem;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition:var(--regTransi);
}

button:hover {
  border-color: #646cff;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.btn-cta{
  width:100px;
  background-color: var(--third-color);
  color:var(--white-color);
}
.btn-cta:hover {
  width:150px;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}






.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}



/* MEDIA QUERIES */
@media all and (min-width:1300px){
  body {
    --layout:"Large-Desk";
    --skeleton:90%;
  }
}

@media all and (max-width:1000px){
  body {
    --layout:"Tab";
    --skeleton:960px;
  }
}


@media all and (max-width:600px){
  body {
    --layout:"Mobile";
    --skeleton:100%;
  }
}

